[gd_scene load_steps=14 format=3 uid="uid://bb6l672p5wvsp"]

[ext_resource type="Script" path="res://Scenes/Characters/Enemies/MovingMediumEnemyMelee/MM_MeleeEnemy.gd" id="1_tsa08"]
[ext_resource type="Script" path="res://Scripts/AlteredBaseScenes/AlertToPlayerArea3D.gd" id="2_oxgf4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eor8w"]
albedo_color = Color(0.352941, 1, 0.278431, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_88874"]
material = SubResource("StandardMaterial3D_eor8w")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ktosw"]

[sub_resource type="BoxShape3D" id="BoxShape3D_upc4j"]
size = Vector3(5.08081, 1.77997, 6.13191)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3kwa7"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_h64h4"]
material = SubResource("StandardMaterial3D_3kwa7")
radius = 0.05
height = 1.2

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_y8nqe"]
radius = 0.05
height = 1.2

[sub_resource type="Animation" id="Animation_quwvy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeleeWeaponArea:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.432359, 0.391885, 0.320255)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeleeWeaponArea:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.445221, -0.0365735, 0.303454)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeleeWeaponArea:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_400ak"]
resource_name = "attack"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeleeWeaponArea:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5, 0.9),
"transitions": PackedFloat32Array(0.159321, 0.5, 1, 1, 0.0980731, 57.68),
"update": 0,
"values": [Vector3(-0.432359, 0.391885, 0.320255), Vector3(-0.460764, 0.366516, 0.685201), Vector3(0.0601688, 0.135323, 0.918566), Vector3(0.447055, 0.0889502, 0.754393), Vector3(0.672069, 0.231859, 0.520645), Vector3(-0.432359, 0.391885, 0.320255)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeleeWeaponArea:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5, 0.7),
"transitions": PackedFloat32Array(0.153893, 0.732043, 1, 1, 1, 57.68),
"update": 0,
"values": [Vector3(-0.445221, -0.0365735, 0.303454), Vector3(-0.449874, 1.20408, 0.845339), Vector3(-0.801023, 1.71287, 1.63806), Vector3(-1.44006, 1.39704, 2.34731), Vector3(-1.44006, 1.39704, 2.68981), Vector3(-0.445221, -0.0365735, 0.303454)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeleeWeaponArea:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(0.34151),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"activate_hitbox"
}]
}

[sub_resource type="Animation" id="Animation_0agwl"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeleeWeaponArea:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.432359, 0.391885, 0.320255)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeleeWeaponArea:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.445221, -0.0365735, 0.303454)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeleeWeaponArea:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_18mrg"]
_data = {
"RESET": SubResource("Animation_quwvy"),
"attack": SubResource("Animation_400ak"),
"idle": SubResource("Animation_0agwl")
}

[node name="MM_MeleeEnemy" type="CharacterBody3D"]
script = ExtResource("1_tsa08")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_88874")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_ktosw")

[node name="PlayerDetectionArea" type="Area3D" parent="."]
collision_layer = 0
monitorable = false
script = ExtResource("2_oxgf4")
attack_range = 3.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerDetectionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.213989, 0.389984, -0.334282)
shape = SubResource("BoxShape3D_upc4j")

[node name="MeleeWeaponArea" type="Area3D" parent="."]
transform = Transform3D(0.958377, -0.283591, -0.0330008, 0.269688, 0.86128, 0.430657, -0.0937075, -0.421632, 0.901912, -0.432359, 0.391885, 0.320255)
monitoring = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="MeleeWeaponArea"]
mesh = SubResource("CapsuleMesh_h64h4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeleeWeaponArea"]
transform = Transform3D(1, 2.98023e-08, 9.31323e-09, 0, 1, 1.86265e-09, 2.79397e-09, 1.11759e-08, 1, -0.00140384, -0.00210118, 0.00429636)
shape = SubResource("CapsuleShape3D_y8nqe")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_18mrg")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_entered"]
[connection signal="body_exited" from="PlayerDetectionArea" to="." method="_on_player_detection_area_body_exited"]
[connection signal="player_entered" from="PlayerDetectionArea" to="." method="_on_player_detection_area_player_entered"]
[connection signal="player_entered_attack_range" from="PlayerDetectionArea" to="." method="_on_player_detection_area_player_entered_attack_range"]
[connection signal="player_exited" from="PlayerDetectionArea" to="." method="_on_player_detection_area_player_exited"]
[connection signal="player_exited_attack_range" from="PlayerDetectionArea" to="." method="_on_player_detection_area_player_exited_attack_range"]
[connection signal="body_entered" from="MeleeWeaponArea" to="." method="_on_melee_weapon_area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
